# calculator

./: .gitignore  .gitkeep  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md
changelog.d/: 20260125_134500_link_calculator_implementation.md  20260125_170300_fix_duration_plus_datetime.md  20260125_170734_wolfram_alpha_suggestion.md  20260125_175918_fix_settings_dropdown_zindex.md  20260125_181506_full_i18n_support.md  20260125_182500_natural_integral_notation.md  20260125_185700_exchange_rate_transparency.md  20260125_223242_fix_rational_arithmetic.md  20260125_advanced_math_functions.md  20260126_095102_consolidated_currency_lino_files.md  20260126_102139_fix_lino_parser_new_format.md  20260126_112832_fix_datetime_lino_parentheses.md  20260126_112913_ci_path_filters.md  20260126_122421_fix_exchange_rate_pipeline.md  20260126_140137_fix_worker_fetch.md  20260126_155726_browser_history.md  20260127_000000_official_central_bank_apis.md  20260127_110314_ui_improvements.md  20260127_113447_examples_and_tests.md  20260129_135131_url_safe_encoding.md  20260223_000000_data_size_units_support.md  20260224_000000_crypto_and_mass_unit_conversions.md  20260224_000001_fix_currency_issues.md  20260224_145844_percent_operator.md  20260224_235939_clf_uf_currency_support.md  20260225_000055_fix_versioning_and_releases.md  20260225_123806_cbr_rates_for_rub_conversions.md  20260225_180000_fix_cbr_cors_and_serve_data_files.md  20260225_190000_fix_ci_npm_registry_403.md  20260225_210000_fix_version_increment.md  20260226_000000_datetime_features.md  20260226_090000_fix_web_version_display.md  20260226_120000_fix_deploy_after_release_409_conflict.md  20260227_121300_issue_84_lino_notation.md  20260227_150039_issue_87_equality_check_operator.md  20260227_170000_fix-interpretation-switching-and-styling.md  20260302_000000_issue_72_currency_rate_in_steps.md  (+59 more)
data/: examples.lino
(+22523 files in other folders)
